k8s/apps/upayan-web/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upayan-web
  labels:
    app: upayan-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upayan-web
  template:
    metadata:
      labels:
        app: upayan-web
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - vps
      containers:
        - name: upayan-web
          image: ghcr.io/upayanmazumder/upayan.dev:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 512Mi
