k8s/apps/upayan-web/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: upayan-api
spec:
  selector:
    app: upayan-web
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
